修改页面样式

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   autofix:
-    if: github.repository == 'langgenius/dify'
+    if: github.repository == 'skyloafer/dify'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
