--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -582,7 +582,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: langgenius/dify-api:1.8.1
+    image: skyloafer/dify-api:1.8.1
     restart: always
     environment:
       # Use the shared environment variables.
@@ -611,7 +611,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: langgenius/dify-api:1.8.1
+    image: skyloafer/dify-api:1.8.1
     restart: always
     environment:
       # Use the shared environment variables.
@@ -638,7 +638,7 @@ services:
   # worker_beat service
   # Celery beat for scheduling periodic tasks.
   worker_beat:
-    image: langgenius/dify-api:1.8.1
+    image: skyloafer/dify-api:1.8.1
     restart: always
     environment:
       # Use the shared environment variables.
@@ -656,7 +656,7 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:1.8.1
+    image: skyloafer/dify-web:1.8.1
     restart: always
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
@@ -733,7 +733,7 @@ services:
 
   # The DifySandbox
   sandbox:
-    image: langgenius/dify-sandbox:0.2.12
+    image: skyloafer/dify-sandbox:0.2.12
     restart: always
     environment:
       # The DifySandbox configurations
@@ -757,7 +757,7 @@ services:
 
   # plugin daemon
   plugin_daemon:
-    image: langgenius/dify-plugin-daemon:0.2.0-local
+    image: skyloafer/dify-plugin-daemon:0.2.0-local
     restart: always
     environment:
       # Use the shared environment variables.
@@ -934,7 +934,7 @@ services:
   # Qdrant vector store.
   # (if used, you need to set VECTOR_STORE to qdrant in the api & worker service.)
   qdrant:
-    image: langgenius/qdrant:v1.7.3
+    image: skyloafer/qdrant:v1.7.3
     profiles:
       - qdrant
     restart: always
