--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -582,7 +582,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: skyloafer/dify-api:1.8.1-tw
+    image: skyloafer/dify-api:1.8.1-tw-1
     restart: always
     environment:
       # Use the shared environment variables.
@@ -611,7 +611,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: skyloafer/dify-api:1.8.1-tw
+    image: skyloafer/dify-api:1.8.1-tw-1
     restart: always
     environment:
       # Use the shared environment variables.
@@ -638,7 +638,7 @@ services:
   # worker_beat service
   # Celery beat for scheduling periodic tasks.
   worker_beat:
-    image: skyloafer/dify-api:1.8.1-tw
+    image: skyloafer/dify-api:1.8.1-tw-1
     restart: always
     environment:
       # Use the shared environment variables.
@@ -656,7 +656,7 @@ services:
 
   # Frontend web application.
   web:
-    image: skyloafer/dify-web:1.8.1-tw
+    image: skyloafer/dify-web:1.8.1-tw-1
     restart: always
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
